--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
 					<a class="blink" href="about.html">Информация о репетиторе</a><br>
 					<a class="blink" href="otzivi.html">Отзывы и комментарии</a><br>
 					<a class="blink" href="mestopolozhenie.html">Местоположение и контакты</a><br>
-					<a class="blink" href="uslovia_i_ceny2.html">Подготовка к ЦТ и ЦЭ</a><br>
-					<a class="blink" href="podgotovka_k_ekzamenu.html">Высшая математика</a><br>
 					<a class="blink" href="shkolnikam.html">Математика для школьников</a><br>
+					<a class="blink" href="uslovia_i_ceny2.html">Подготовка к ЦТ и ЦЭ</a><br>
+					<a class="blink" href="preparation-for-lyceums.html">Подготовка в лицеи</a><br>
+					<a class="blink" href="podgotovka_k_ekzamenu.html">Высшая математика</a><br>
 					<a class="blink" href="mathematics-for-professionals.html">Математика для взрослых</a><br>
 					<a class="blink" href="pomosch_reshenii_zadach.html">Онлайн репетитор</a><br>
-					<a class="blink" href="metodika_prepodavania.html">Подготовка в лицеи</a><br>
 					<a class="blink" href="russian-language-tutor.html">Репетитор по русскому языку</a><br>
 				</div>
 			</div>
@@ -71,31 +71,28 @@
 						<a class="blink" href="about.html">Информация о репетиторе</a><br>
 						<a class="blink" href="otzivi.html">Отзывы и комментарии</a><br>
 						<a class="blink" href="mestopolozhenie.html">Местоположение и контакты</a><br>
-						<a class="blink" href="uslovia_i_ceny2.html">Подготовка к ЦТ и ЦЭ</a><br>
-						<a class="blink" href="podgotovka_k_ekzamenu.html">Высшая математика</a><br>
 						<a class="blink" href="shkolnikam.html">Математика для школьников</a><br>
+						<a class="blink" href="uslovia_i_ceny2.html">Подготовка к ЦТ и ЦЭ</a><br>
+						<a class="blink" href="preparation-for-lyceums.html">Подготовка в лицеи</a><br>
+						<a class="blink" href="podgotovka_k_ekzamenu.html">Высшая математика</a><br>
 						<a class="blink" href="mathematics-for-professionals.html">Математика для взрослых</a><br>
 						<a class="blink" href="pomosch_reshenii_zadach.html">Онлайн репетитор</a><br>
-						<a class="blink" href="metodika_prepodavania.html">Подготовка в лицеи</a><br>
 						<a class="blink" href="russian-language-tutor.html">Репетитор по русскому языку</a><br>
 					</div>
 				</details>
 			</div>
 			<div class="fon">
 				<div class="foncall">
-					<img src="./images/advantages/mts.png"
-					 	alt="tech">
-						<a href="tel:+375298515251">+375(29)851-52-51</a><br>
-					<img src="./images/advantages/velcom.jpg"
-					 	alt="tech">
-						<a href="tel:+375296575971">+375(29)657-59-71</a><br>
-					<img src="./images/advantages/vib.png"
-					 	alt="tech">
-						<a href="tel:+375172400021">+375(17)240-00-21</a>
-				</div><br>
+					<img src="./images/advantages/mtts.png"> <a href="tel:+375298515251">+375(29)851-52-51</a><br>
+					<img src="./images/advantages/velccom.png"> <a href="tel:+375296575971">+375(29)657-59-71</a><br>
+					<img src="./images/advantages/calls.png"> <a href="tel:+375172400021">+375(17)240-00-21</a><br>
+					<img src="./images/advantages/viber.png"> <a href="viber://add?number=375296575971">+375(29)657-59-71</a><br>
+					<img src="./images/advantages/telegram.png"> <a href="https://t.me/mathematicsby">+375(29)851-52-51</a><br>
+					<img src="./images/advantages/whatts.png"> <a href="whatsapp://send?text=Hello&phone=+375296575971&abid=+375296575971">+375(29)657-59-71</a><br>
+				</div>
 				<div class="otz">
 					<span class="otz0">
-						<a href="otzivi.html">Отзывы о репетиторе >></a>
+						<a href="otzivi.html">Отзывы о репетиторе</a>
 					</span>
 					<div class="ot0">
 						<div class="ot1">
@@ -108,7 +105,7 @@
 							<a href="otzivi.html#denis">Денис Гайков</a>
 						</div>
 						<div class="ot3">
-							<em>https://vk.com/dorianos</em>
+							<span class="former-em">https://vk.com/dorianos</span>
 						</div>
 						<div class="ot4">
 							 "В 2013 году заканчивал школу 
@@ -132,7 +129,7 @@
 								<a href="otzivi.html#kalenik">Каленик Карина</a>
 							</div>
 							<div class="ot3">
-								<em>https://vk.com/id43488026</em>
+								<span class="former-em">https://vk.com/id43488026</span>
 							</div>
 							<div class="ot4">
 															"Хочу сказать спасибо Игорю 
@@ -159,7 +156,7 @@
 								</a>
 							</div>
 							<div class="ot3">
-								<em>https://vk.com/id158624529</em>
+								<span class="former-em">https://vk.com/id158624529</span>
 							</div>
 							<div class="ot4">
 														"Что бы я могла рассказать об
@@ -209,7 +206,7 @@
 								</a>
 							</div>
 							<div class="ot3">
-								<em>https://vk.com/andrea94</em>
+								<span class="former-em">https://vk.com/andrea94</span>
 							</div>
 							<div class="ot4">
 														"Добрый день всем. Хотелось 
@@ -234,8 +231,7 @@
 		</a>
 	</span>
 	<span class="otz01">
-		<a href="otzivi.html#kovalenko">Ещё отзывы о репетиторе по математике >>
-		</a>
+		<a href="otzivi.html#kovalenko">Ещё отзывы о репетиторе по математике</a>
 	</span>
 
 	<div class="portal-raitings">
@@ -243,6 +239,12 @@
 			Отзывы и рейтинг <br> репетитора <br> по математике <br> на интернет-порталах:<br>
 		</p>
 		<p>
+			<a class="imagelink"
+				href="https://zoon.by/minsk/p-repetitor/igor_viktorovich_ignatev/"
+				target="_blank">
+				<img class="img-service-rating" src="images/outlogo/zoon-rating.png" alt="Отзывы и рейтинг репетитора по математике в Zoon">
+			</a>
+			<br>
 			<a class="imagelink" 
 				href="https://www.google.ru/maps/place/%D0%A0%D0%B5%D0%BF%D0%B5%D1%82%D0%B8%D1%82%D0%BE%D1%80+%D0%BF%D0%BE+%D0%BC%D0%B0%D1%82%D0%B5%D0%BC%D0%B0%D1%82%D0%B8%D0%BA%D0%B5+%D0%B8+%D0%B2%D1%8B%D1%81%D1%88%D0%B5%D0%B9+%D0%BC%D0%B0%D1%82%D0%B5%D0%BC%D0%B0%D1%82%D0%B8%D0%BA%D0%B5/@53.8441701,27.4731643,17z/data=!4m7!3m6!1s0x46dbd08fe2ccda05:0xa95d082eeede3ee2!8m2!3d53.844167!4d27.475353!9m1!1b1"
 				target="_blank">
@@ -259,12 +261,6 @@
 				href="https://uslugi.yandex.ru/profile/IgorViktorovichIgnatev-199845"
 				target="_blank">
 				<img class="img-service-rating" src="images/outlogo/yandex-service-rating.png" alt="Отзывы и рейтинг репетитора по математике в Яндекс.Услуги">
-			</a>
-			<br>
-			<a class="imagelink" 
-				href="https://zoon.by/minsk/p-repetitor/igor_viktorovich_ignatev/"
-				target="_blank">
-				<img class="img-service-rating" src="images/outlogo/zoon-rating.png" alt="Отзывы и рейтинг репетитора по математике в Zoon">
 			</a>
 		</p>
 	</div>
@@ -346,17 +342,16 @@
 				</span>
 			</h2>
 			<div class="op1">
-			Занятия проводит <span class="roztx"> кандидат физико-математических наук</span> с опытом работы более 25 лет.
-			Мной подготовлены <span class="roztx">победители и призеры математических олимпиад</span> различного уровня
-			(свыше 25 учеников), абитуриенты, набравшие на <span class="roztx">ЦТ по математике 100 баллов</span> 
+			Занятия проводит <em>кандидат физико-математических наук</em> с опытом работы более 25 лет.
+			Мной подготовлены <em>победители и призеры математических олимпиад</em> различного уровня
+			(свыше 25 учеников), абитуриенты, набравшие на <em>ЦТ по математике 100 баллов</em> 
 			(более 15 учеников).
 			</div>
-				<span class="p1">
+				<p class="p1" style="text-align: center;">
 					<a href="about.html">
-					Подробная информация о репетиторе
+					    Подробная информация о репетиторе
 					</a>
-						<span class="strelki">&gt;&gt;</span>
-				</span>
+				</p>
 			<div class="right1">
 				<span class="skr">
 					<a href="otzivi.html">
@@ -383,24 +378,23 @@
 				<span class="h21">Основные направления деятельности:</span>
 			</h2>
 			<div class="b1">
-				<span class="zg">Подготовка к ЦТ по математике.</span> <span class="zgt">Более <span class="roztx">500 абитуриентов</span>
+				<strong>Подготовка к ЦТ по математике.</strong> <span class="zgt">Более <em>500 абитуриентов</em>
 				с моей помощью поступили в различные вузы Беларуси, дальнего и ближнего зарубежья. Создана электронная база, 
 				включающая в себя все варианты централизованных и репетиционных тестирований всех лет и авторские наработки 
 				с возможностью любой выборки, будь то тема, уровень сложности, год, всевозможные другие критерии и их пересечения. 
-				Также мной осуществляется подготовка к <span class="roztx">ЕГЭ по математике.
+				Также мной осуществляется подготовка к <em>ЕГЭ по математике.</em>
 				</span>
-				</span>
+                <br>
 				<span class="p1">
 					<a href="uslovia_i_ceny2.html">
-					Подробная информация о подготовке к ЦТ
+					    Подробная информация о подготовке к ЦТ
 					</a>
-					<span class="strelki">&gt;&gt;</span></span>
+				</span>
 			</div>
 			<div class="b2">
-					<span class="zg">Репетитор по высшей математике.</span>
-					<span class="zgt">Более <span class="roztx">400 студентов</span>
-					подготовлено мной к экзаменам <span class="roztx">по высшей математике</span>
-					<span class="roztx">и другим математическим дисциплинам</span>.
+					<strong>Репетитор по высшей математике.</strong>
+					<span class="zgt">Более <em>400 студентов</em>
+					подготовлено мной к экзаменам <em>по высшей математике и другим математическим дисциплинам</em>.
 					Все студенты, занимавшиеся на постоянной основе и выполнявшие домашнее задание, сдали экзамен с первого раза.
 					Далеко не все студенты могут самостоятельно освоить разделы высшей математики. Зачастую студенты первого курса
 					не понимают грань, которая разделяет школу и вуз. Скорее всего, материал более не будет «разжевываться», 
@@ -411,18 +405,18 @@
 							style="vertical-align: middle; width: 30px;"> 
 					Пересдача и отчисление – это новые неприятные, но, тем не менее, реальные вещи. Не стоит до этого доводить.
 					</span>
+                    <br>
 					<span class="p1">
 						<a href="podgotovka_k_ekzamenu.html">
-						Подробная информация о репетиторе по высшей математике
+						    Подробная информация о репетиторе по высшей математике
 						</a>
-					<span class="strelki">&gt;&gt;</span>
 					</span>
 			</div>
 			<div class="b3">
-				<span class="zg">Репетитор по математике для школьников.</span>
+				<strong>Репетитор по математике для школьников.</strong>
 				<span class="zgt">Провожу занятия со школьниками 4, 5, 6, 7, 8, 9, 10 и 11 класса с любым уровнем подготовки. 
 				Считаю основным создание у ученика 
-				<span class="roztx">фундаментальной математической базы</span>, 
+				<em>фундаментальной математической базы</em>, 
 				соответствующей его классу, уровню, 
 				математическим способностям и дальнейшего ее развития. Учу находить взаимосвязь между различными главами 
 				и разделами математики. Постоянно держу на контроле новые темы, зачастую работаю на опережение. 
@@ -432,54 +426,52 @@
 				</span>
 				<p></p>
 				<span class="tt1">
-					<em class="roztx">Отдельно выделю следующие направления:</em>
+					<span class="former-em" style="color:rgb(255, 90, 90);">Отдельно выделю следующие направления:</span>
 				</span><br>
 				<span class="tt2">
-				<span class="roztx">-подготовка по математике для поступления в лицей, колледж, гимназию после 9-го класса;</span><br>
+				<em>-подготовка по математике для поступления в лицей, колледж, гимназию после 9-го класса;</em><br>
 			-подготовка к ОГЭ по математике;<br>
 			-подготовка к математическим олимпиадам;<br>
 			-решение нестандартных и логических задач.<br>
 				</span>
 				<span class="p1">
 					<a href="shkolnikam.html">
-					Подробная информация о репетиторе по математике для школьников
+					    Подробная информация о репетиторе по математике для школьников
 					</a>
-						<span class="strelki">&gt;&gt;
-						</span>
 				</span>
 			</div>
 			<div class="b4">
-				<span class="zg">Репетитор по математике для взрослых.</span>
+				<strong>Репетитор по математике для взрослых.</strong>
 				<span class="zgt">В последние годы обозначилась тенденция, когда взрослые, зачастую уже состоявшиеся в своей 
 				профессии люди, осознают, что недостаточная математическая база является стопором в дальнейшем развитии и совершенствовании
 				в выбранной специальности. Нередко требуется 
-					<span class="roztx">репетитор по алгебре и геометрии </span> 
+					<em>репетитор по алгебре и геометрии </em>
 					для восстановления основ школьной программы,
 				необходима подготовка по основным главам высшей математики, 
-				<span class="roztx">теории вероятностей</span>, 
+				<em>теории вероятностей</em>, 
 				дальнейший выход на специальные дисциплины.
 				</span>
+                <br>
 				<span class="p1">
 					<a href="mathematics-for-professionals.html">
 					Подробная информация о репетиторе по математике для взрослых
 					</a>
-					<span class="strelki">&gt;&gt;</span>
 				</span>
 			</div>
 			<div class="b5">
-				<span class="zg">Онлайн репетитор по математике.</span>
+				<strong>Онлайн репетитор по математике.</strong>
 				<span class="zgt">
-					<span class="roztx">Репетитор по Skype (репетитор по скайпу)
-					</span> для школьников, абитуриентов, студентов и взрослых. Отмечу, что данный вид репетиторства
+					<em>Репетитор по Skype (репетитор по скайпу) </em>
+					для школьников, абитуриентов, студентов и взрослых. Отмечу, что данный вид репетиторства
 					математики на постоянной основе больше подходит для учеников, имеющих определенные навыки и математические 
 					способности. Также оказывается экстренная помощь: 
-					<span class="roztx">репетитор по математике онлайн.</span>
+					<em>репетитор по математике онлайн.</em>
 				</span>
+                <br>
 				<span class="p1">
 					<a href="pomosch_reshenii_zadach.html">
-					Подробная информация о репетиторе онлайн по математике
+					    Подробная информация о репетиторе онлайн по математике
 					</a>
-					<span class="strelki">&gt;&gt;</span>
 				</span>
 			</div>
 			<div class="title">Преимущества:
@@ -863,36 +855,36 @@
 		</span>
 	</div>	
 	<div class="right1">
-		<div class="portal-raitings">
-			<p style="margin-left: 5px; margin-top: 15px; color: dimgray;">
-				Отзывы и рейтинг <br> репетитора <br> по математике <br> на интернет-порталах:<br>
-			</p>
-			<p>
-				<a class="imagelink" 
-					href="https://www.google.ru/maps/place/%D0%A0%D0%B5%D0%BF%D0%B5%D1%82%D0%B8%D1%82%D0%BE%D1%80+%D0%BF%D0%BE+%D0%BC%D0%B0%D1%82%D0%B5%D0%BC%D0%B0%D1%82%D0%B8%D0%BA%D0%B5+%D0%B8+%D0%B2%D1%8B%D1%81%D1%88%D0%B5%D0%B9+%D0%BC%D0%B0%D1%82%D0%B5%D0%BC%D0%B0%D1%82%D0%B8%D0%BA%D0%B5/@53.8441701,27.4731643,17z/data=!4m7!3m6!1s0x46dbd08fe2ccda05:0xa95d082eeede3ee2!8m2!3d53.844167!4d27.475353!9m1!1b1"
-					target="_blank">
-					<img class="img-service-rating" src="images/outlogo/google-rating.png" alt="Отзывы и рейтинг репетитора по математике в Google">
-				</a>
-				<br>
-				<a class="imagelink" 
-					href="https://yandex.by/maps/org/repetitor_po_matematike_i_vysshey_matematike_ignatyev_igor_viktorovich/1373635637/reviews/"
-					target="_blank">
-					<img class="img-service-rating" src="images/outlogo/yandex-rating.png" alt="Отзывы и рейтинг репетитора по математике в Яндекс">
-				</a>
-				<br>
-				<a class="imagelink" 
-					href="https://uslugi.yandex.ru/profile/IgorViktorovichIgnatev-199845"
-					target="_blank">
-					<img class="img-service-rating" src="images/outlogo/yandex-service-rating.png" alt="Отзывы и рейтинг репетитора по математике в Яндекс.Услуги">
-				</a>
-				<br>
-				<a class="imagelink" 
-					href="https://zoon.by/minsk/p-repetitor/igor_viktorovich_ignatev/"
-					target="_blank">
-					<img class="img-service-rating" src="images/outlogo/zoon-rating.png" alt="Отзывы и рейтинг репетитора по математике в Zoon">
-				</a>
-			</p>
-		</div>
+	<div class="portal-raitings">
+		<p style="margin-left: 5px; margin-top: 15px; color: dimgray;">
+			Отзывы и рейтинг <br> репетитора <br> по математике <br> на интернет-порталах:<br>
+		</p>
+		<p>
+			<a class="imagelink"
+				href="https://zoon.by/minsk/p-repetitor/igor_viktorovich_ignatev/"
+				target="_blank">
+				<img class="img-service-rating" src="images/outlogo/zoon-rating.png" alt="Отзывы и рейтинг репетитора по математике в Zoon">
+			</a>
+			<br>
+			<a class="imagelink" 
+				href="https://www.google.ru/maps/place/%D0%A0%D0%B5%D0%BF%D0%B5%D1%82%D0%B8%D1%82%D0%BE%D1%80+%D0%BF%D0%BE+%D0%BC%D0%B0%D1%82%D0%B5%D0%BC%D0%B0%D1%82%D0%B8%D0%BA%D0%B5+%D0%B8+%D0%B2%D1%8B%D1%81%D1%88%D0%B5%D0%B9+%D0%BC%D0%B0%D1%82%D0%B5%D0%BC%D0%B0%D1%82%D0%B8%D0%BA%D0%B5/@53.8441701,27.4731643,17z/data=!4m7!3m6!1s0x46dbd08fe2ccda05:0xa95d082eeede3ee2!8m2!3d53.844167!4d27.475353!9m1!1b1"
+				target="_blank">
+				<img class="img-service-rating" src="images/outlogo/google-rating.png" alt="Отзывы и рейтинг репетитора по математике в Google">
+			</a>
+			<br>
+			<a class="imagelink" 
+				href="https://yandex.by/maps/org/repetitor_po_matematike_i_vysshey_matematike_ignatyev_igor_viktorovich/1373635637/reviews/"
+				target="_blank">
+				<img class="img-service-rating" src="images/outlogo/yandex-rating.png" alt="Отзывы и рейтинг репетитора по математике в Яндекс">
+			</a>
+			<br>
+			<a class="imagelink" 
+				href="https://uslugi.yandex.ru/profile/IgorViktorovichIgnatev-199845"
+				target="_blank">
+				<img class="img-service-rating" src="images/outlogo/yandex-service-rating.png" alt="Отзывы и рейтинг репетитора по математике в Яндекс.Услуги">
+			</a>
+		</p>
+	</div>
 	</div>
 		
 	<div class="no">
@@ -910,7 +902,7 @@
 			</div>
 			<div class="glf2">
 				<img src="./images/advantages/viber.png"> <a style="text-decoration: none;" href="viber://add?number=375296575971">+375(29)657-59-71</a><br>
-				<img src="./images/advantages/telegram.png"><a style="text-decoration: none;" href="tg://resolve?domain=mathematicsby">+375(29)851-52-51</a><br>
+				<img src="./images/advantages/telegram.png"> <a style="text-decoration: none;" href="https://t.me/mathematicsby">+375(29)851-52-51</a><br>
 				<img src="./images/advantages/whatts.png"> <a style="text-decoration: none;" href="whatsapp://send?text=Hello&phone=+375296575971&abid=+375296575971">+375(29)657-59-71</a>
 			</div>
 			<div class="glf3">
