--- a/russian-language-tutor.html
+++ b/russian-language-tutor.html
@@ -50,12 +50,12 @@
 					<a class="blink" href="about.html">Информация о репетиторе</a><br>
 					<a class="blink" href="otzivi.html">Отзывы и комментарии</a><br>
 					<a class="blink" href="mestopolozhenie.html">Местоположение и контакты</a><br>
-					<a class="blink" href="uslovia_i_ceny2.html">Подготовка к ЦТ и ЦЭ</a><br>
-					<a class="blink" href="podgotovka_k_ekzamenu.html">Высшая математика</a><br>
 					<a class="blink" href="shkolnikam.html">Математика для школьников</a><br>
+					<a class="blink" href="uslovia_i_ceny2.html">Подготовка к ЦТ и ЦЭ</a><br>
+					<a class="blink" href="preparation-for-lyceums.html">Подготовка в лицеи</a><br>
+					<a class="blink" href="podgotovka_k_ekzamenu.html">Высшая математика</a><br>
 					<a class="blink" href="mathematics-for-professionals.html">Математика для взрослых</a><br>
 					<a class="blink" href="pomosch_reshenii_zadach.html">Онлайн репетитор</a><br>
-					<a class="blink" href="metodika_prepodavania.html">Подготовка в лицеи</a><br>
 					<a class="blink" href="russian-language-tutor.html">Репетитор по русскому языку</a><br>
 				</div>
 			</div>
@@ -69,12 +69,12 @@
 						<a class="blink" href="about.html">Информация о репетиторе</a><br>
 						<a class="blink" href="otzivi.html">Отзывы и комментарии</a><br>
 						<a class="blink" href="mestopolozhenie.html">Местоположение и контакты</a><br>
-						<a class="blink" href="uslovia_i_ceny2.html">Подготовка к ЦТ и ЦЭ</a><br>
-						<a class="blink" href="podgotovka_k_ekzamenu.html">Высшая математика</a><br>
 						<a class="blink" href="shkolnikam.html">Математика для школьников</a><br>
+						<a class="blink" href="uslovia_i_ceny2.html">Подготовка к ЦТ и ЦЭ</a><br>
+						<a class="blink" href="preparation-for-lyceums.html">Подготовка в лицеи</a><br>
+						<a class="blink" href="podgotovka_k_ekzamenu.html">Высшая математика</a><br>
 						<a class="blink" href="mathematics-for-professionals.html">Математика для взрослых</a><br>
 						<a class="blink" href="pomosch_reshenii_zadach.html">Онлайн репетитор</a><br>
-						<a class="blink" href="metodika_prepodavania.html">Подготовка в лицеи</a><br>
 						<a class="blink" href="russian-language-tutor.html">Репетитор по русскому языку</a><br>
 					</div>
 				</details>
@@ -84,7 +84,7 @@
 					<img src="./images/advantages/mts.png"
 					 	alt="tech">
 						<a href="tel:+375295021002">+375(29)502-10-02</a><br>
-					<img src="./images/advantages/velcom.jpg"
+					<img src="./images/advantages/velccom.png"
 					 	alt="tech">
 						<a href="tel:+375444565275">+375(44)456-52-75</a><br>
 					<img src="./images/advantages/viber.png"
@@ -94,7 +94,11 @@
 						alt="tech">
 					   <a href="https://t.me/+375295021002">+375(29)502-10-02</a>						
 				</div><br>
-
+				<div class="otz">
+					<span class="otz0">
+						<a href="russian-language-tutor-reviews.html">Отзывы о репетиторе</a>
+					</span>
+                </div>
 			</div>
 		</div>
 
@@ -308,6 +312,11 @@
 							</li>
 						</ul>
 				</ol>
+                <p align="center">
+                    <span class="otz0">
+                        <a href="russian-language-tutor-reviews.html">Отзывы о репетиторе c комментариями</a>
+                    </span>
+                </p>
 			</div>
 
 			<div class="clear"></div>
@@ -322,7 +331,7 @@
 				</div>
 				<div class="glf2">
 					<img src="./images/advantages/viber.png"> <a style="text-decoration: none;" href="viber://add?number=375295021002">+375(29)502-10-02</a><br>
-					<img src="./images/advantages/telegram.png"><a style="text-decoration: none;" href="https://t.me/+375295021002">+375(29)502-10-02</a><br>
+					<img src="./images/advantages/telegram.png"> <a style="text-decoration: none;" href="https://t.me/+375295021002">+375(29)502-10-02</a><br>
 				</div>
 				<div class="glf3">
 					<img src="./images/advantages/world-map.png"> <a href="site_map.html">Карта сайта</a><br>
