--- a/about.html
+++ b/about.html
@@ -49,12 +49,12 @@
 					<a class="blink" href="about.html">Информация о репетиторе</a><br>
 					<a class="blink" href="otzivi.html">Отзывы и комментарии</a><br>
 					<a class="blink" href="mestopolozhenie.html">Местоположение и контакты</a><br>
-					<a class="blink" href="uslovia_i_ceny2.html">Подготовка к ЦТ и ЦЭ</a><br>
-					<a class="blink" href="podgotovka_k_ekzamenu.html">Высшая математика</a><br>
 					<a class="blink" href="shkolnikam.html">Математика для школьников</a><br>
+					<a class="blink" href="uslovia_i_ceny2.html">Подготовка к ЦТ и ЦЭ</a><br>
+					<a class="blink" href="preparation-for-lyceums.html">Подготовка в лицеи</a><br>
+					<a class="blink" href="podgotovka_k_ekzamenu.html">Высшая математика</a><br>
 					<a class="blink" href="mathematics-for-professionals.html">Математика для взрослых</a><br>
 					<a class="blink" href="pomosch_reshenii_zadach.html">Онлайн репетитор</a><br>
-					<a class="blink" href="metodika_prepodavania.html">Подготовка в лицеи</a><br>
 					<a class="blink" href="russian-language-tutor.html">Репетитор по русскому языку</a><br>
 				</div>
 			</div>
@@ -68,28 +68,25 @@
 						<a class="blink" href="about.html">Информация о репетиторе</a><br>
 						<a class="blink" href="otzivi.html">Отзывы и комментарии</a><br>
 						<a class="blink" href="mestopolozhenie.html">Местоположение и контакты</a><br>
-						<a class="blink" href="uslovia_i_ceny2.html">Подготовка к ЦТ и ЦЭ</a><br>
-						<a class="blink" href="podgotovka_k_ekzamenu.html">Высшая математика</a><br>
 						<a class="blink" href="shkolnikam.html">Математика для школьников</a><br>
+						<a class="blink" href="uslovia_i_ceny2.html">Подготовка к ЦТ и ЦЭ</a><br>
+						<a class="blink" href="preparation-for-lyceums.html">Подготовка в лицеи</a><br>
+						<a class="blink" href="podgotovka_k_ekzamenu.html">Высшая математика</a><br>
 						<a class="blink" href="mathematics-for-professionals.html">Математика для взрослых</a><br>
 						<a class="blink" href="pomosch_reshenii_zadach.html">Онлайн репетитор</a><br>
-						<a class="blink" href="metodika_prepodavania.html">Подготовка в лицеи</a><br>
 						<a class="blink" href="russian-language-tutor.html">Репетитор по русскому языку</a><br>
 					</div>
 				</details>
 			</div>
 			<div class="fon">
 				<div class="foncall">
-					<img src="./images/advantages/mts.png"
-					 	alt="tech">
-						<a href="tel:+375298515251">+375(29)851-52-51</a><br>
-					<img src="./images/advantages/velcom.jpg"
-					 	alt="tech">
-						<a href="tel:+375296575971">+375(29)657-59-71</a><br>
-					<img src="./images/advantages/vib.png"
-					 	alt="tech">
-						<a href="tel:+375172400021">+375(17)240-00-21</a>
-				</div><br>
+					<img src="./images/advantages/mtts.png"> <a href="tel:+375298515251">+375(29)851-52-51</a><br>
+					<img src="./images/advantages/velccom.png"> <a href="tel:+375296575971">+375(29)657-59-71</a><br>
+					<img src="./images/advantages/calls.png"> <a href="tel:+375172400021">+375(17)240-00-21</a><br>
+					<img src="./images/advantages/viber.png"> <a href="viber://add?number=375296575971">+375(29)657-59-71</a><br>
+					<img src="./images/advantages/telegram.png"> <a href="https://t.me/mathematicsby">+375(29)851-52-51</a><br>
+					<img src="./images/advantages/whatts.png"> <a href="whatsapp://send?text=Hello&phone=+375296575971&abid=+375296575971">+375(29)657-59-71</a><br>
+				</div>
 				<div class="otz">
 					<span class="otz0">
 						<a href="otzivi.html">Отзывы о репетиторе >></a>
@@ -105,7 +102,7 @@
 							<a href="otzivi.html#denis">Денис Гайков</a>
 						</div>
 						<div class="ot3">
-							<em>https://vk.com/dorianos</em>
+							<span class="former-em">https://vk.com/dorianos</span>
 						</div>
 						<div class="ot4">
 							 "В 2013 году заканчивал школу 
@@ -129,7 +126,7 @@
 								<a href="otzivi.html#kalenik">Каленик Карина</a>
 							</div>
 							<div class="ot3">
-								<em>https://vk.com/id43488026</em>
+								<span class="former-em">https://vk.com/id43488026</span>
 							</div>
 							<div class="ot4">
 															"Хочу сказать спасибо Игорю 
@@ -156,7 +153,7 @@
 								</a>
 							</div>
 							<div class="ot3">
-								<em>https://vk.com/id158624529</em>
+								<span class="former-em">https://vk.com/id158624529</span>
 							</div>
 							<div class="ot4">
 														"Что бы я могла рассказать об
@@ -205,7 +202,7 @@
 								</a>
 							</div>
 							<div class="ot3">
-								<em>https://vk.com/andrea94</em>
+								<span class="former-em">https://vk.com/andrea94</span>
 							</div>
 							<div class="ot4">
 														"Добрый день всем. Хотелось 
@@ -238,6 +235,12 @@
 			Отзывы и рейтинг <br> репетитора <br> по математике <br> на интернет-порталах:<br>
 		</p>
 		<p>
+			<a class="imagelink"
+				href="https://zoon.by/minsk/p-repetitor/igor_viktorovich_ignatev/"
+				target="_blank">
+				<img class="img-service-rating" src="images/outlogo/zoon-rating.png" alt="Отзывы и рейтинг репетитора по математике в Zoon">
+			</a>
+			<br>
 			<a class="imagelink" 
 				href="https://www.google.ru/maps/place/%D0%A0%D0%B5%D0%BF%D0%B5%D1%82%D0%B8%D1%82%D0%BE%D1%80+%D0%BF%D0%BE+%D0%BC%D0%B0%D1%82%D0%B5%D0%BC%D0%B0%D1%82%D0%B8%D0%BA%D0%B5+%D0%B8+%D0%B2%D1%8B%D1%81%D1%88%D0%B5%D0%B9+%D0%BC%D0%B0%D1%82%D0%B5%D0%BC%D0%B0%D1%82%D0%B8%D0%BA%D0%B5/@53.8441701,27.4731643,17z/data=!4m7!3m6!1s0x46dbd08fe2ccda05:0xa95d082eeede3ee2!8m2!3d53.844167!4d27.475353!9m1!1b1"
 				target="_blank">
@@ -254,12 +257,6 @@
 				href="https://uslugi.yandex.ru/profile/IgorViktorovichIgnatev-199845"
 				target="_blank">
 				<img class="img-service-rating" src="images/outlogo/yandex-service-rating.png" alt="Отзывы и рейтинг репетитора по математике в Яндекс.Услуги">
-			</a>
-			<br>
-			<a class="imagelink" 
-				href="https://zoon.by/minsk/p-repetitor/igor_viktorovich_ignatev/"
-				target="_blank">
-				<img class="img-service-rating" src="images/outlogo/zoon-rating.png" alt="Отзывы и рейтинг репетитора по математике в Zoon">
 			</a>
 		</p>
 	</div>
@@ -371,36 +368,36 @@
 		</span>
 	</div>	
 	<div class="right1">
-		<div class="portal-raitings">
-			<p style="margin-left: 5px; margin-top: 15px; color: dimgray;">
-				Отзывы и рейтинг <br> репетитора <br> по математике <br> на интернет-порталах:<br>
-			</p>
-			<p>
-				<a class="imagelink" 
-					href="https://www.google.ru/maps/place/%D0%A0%D0%B5%D0%BF%D0%B5%D1%82%D0%B8%D1%82%D0%BE%D1%80+%D0%BF%D0%BE+%D0%BC%D0%B0%D1%82%D0%B5%D0%BC%D0%B0%D1%82%D0%B8%D0%BA%D0%B5+%D0%B8+%D0%B2%D1%8B%D1%81%D1%88%D0%B5%D0%B9+%D0%BC%D0%B0%D1%82%D0%B5%D0%BC%D0%B0%D1%82%D0%B8%D0%BA%D0%B5/@53.8441701,27.4731643,17z/data=!4m7!3m6!1s0x46dbd08fe2ccda05:0xa95d082eeede3ee2!8m2!3d53.844167!4d27.475353!9m1!1b1"
-					target="_blank">
-					<img class="img-service-rating" src="images/outlogo/google-rating.png" alt="Отзывы и рейтинг репетитора по математике в Google">
-				</a>
-				<br>
-				<a class="imagelink" 
-					href="https://yandex.by/maps/org/repetitor_po_matematike_i_vysshey_matematike_ignatyev_igor_viktorovich/1373635637/reviews/"
-					target="_blank">
-					<img class="img-service-rating" src="images/outlogo/yandex-rating.png" alt="Отзывы и рейтинг репетитора по математике в Яндекс">
-				</a>
-				<br>
-				<a class="imagelink" 
-					href="https://uslugi.yandex.ru/profile/IgorViktorovichIgnatev-199845"
-					target="_blank">
-					<img class="img-service-rating" src="images/outlogo/yandex-service-rating.png" alt="Отзывы и рейтинг репетитора по математике в Яндекс.Услуги">
-				</a>
-				<br>
-				<a class="imagelink" 
-					href="https://zoon.by/minsk/p-repetitor/igor_viktorovich_ignatev/"
-					target="_blank">
-					<img class="img-service-rating" src="images/outlogo/zoon-rating.png" alt="Отзывы и рейтинг репетитора по математике в Zoon">
-				</a>
-			</p>
-		</div>
+	<div class="portal-raitings">
+		<p style="margin-left: 5px; margin-top: 15px; color: dimgray;">
+			Отзывы и рейтинг <br> репетитора <br> по математике <br> на интернет-порталах:<br>
+		</p>
+		<p>
+			<a class="imagelink"
+				href="https://zoon.by/minsk/p-repetitor/igor_viktorovich_ignatev/"
+				target="_blank">
+				<img class="img-service-rating" src="images/outlogo/zoon-rating.png" alt="Отзывы и рейтинг репетитора по математике в Zoon">
+			</a>
+			<br>
+			<a class="imagelink" 
+				href="https://www.google.ru/maps/place/%D0%A0%D0%B5%D0%BF%D0%B5%D1%82%D0%B8%D1%82%D0%BE%D1%80+%D0%BF%D0%BE+%D0%BC%D0%B0%D1%82%D0%B5%D0%BC%D0%B0%D1%82%D0%B8%D0%BA%D0%B5+%D0%B8+%D0%B2%D1%8B%D1%81%D1%88%D0%B5%D0%B9+%D0%BC%D0%B0%D1%82%D0%B5%D0%BC%D0%B0%D1%82%D0%B8%D0%BA%D0%B5/@53.8441701,27.4731643,17z/data=!4m7!3m6!1s0x46dbd08fe2ccda05:0xa95d082eeede3ee2!8m2!3d53.844167!4d27.475353!9m1!1b1"
+				target="_blank">
+				<img class="img-service-rating" src="images/outlogo/google-rating.png" alt="Отзывы и рейтинг репетитора по математике в Google">
+			</a>
+			<br>
+			<a class="imagelink" 
+				href="https://yandex.by/maps/org/repetitor_po_matematike_i_vysshey_matematike_ignatyev_igor_viktorovich/1373635637/reviews/"
+				target="_blank">
+				<img class="img-service-rating" src="images/outlogo/yandex-rating.png" alt="Отзывы и рейтинг репетитора по математике в Яндекс">
+			</a>
+			<br>
+			<a class="imagelink" 
+				href="https://uslugi.yandex.ru/profile/IgorViktorovichIgnatev-199845"
+				target="_blank">
+				<img class="img-service-rating" src="images/outlogo/yandex-service-rating.png" alt="Отзывы и рейтинг репетитора по математике в Яндекс.Услуги">
+			</a>
+		</p>
+	</div>
 	</div>
 		
 	<div class="no">
@@ -418,7 +415,7 @@
 			</div>
 			<div class="glf2">
 				<img src="./images/advantages/viber.png"> <a style="text-decoration: none;" href="viber://add?number=375296575971">+375(29)657-59-71</a><br>
-				<img src="./images/advantages/telegram.png"><a style="text-decoration: none;" href="tg://resolve?domain=mathematicsby">+375(29)851-52-51</a><br>
+				<img src="./images/advantages/telegram.png"><a style="text-decoration: none;" href="https://t.me/mathematicsby">+375(29)851-52-51</a><br>
 				<img src="./images/advantages/whatts.png"> <a style="text-decoration: none;" href="whatsapp://send?text=Hello&phone=+375296575971&abid=+375296575971">+375(29)657-59-71</a>
 			</div>
 			<div class="glf3">
