--- a/mestopolozhenie.html
+++ b/mestopolozhenie.html
@@ -184,12 +184,13 @@
 		</div>
 		<div class="fon">
 			<div class="foncall">
-				<img src="./images/advantages/mts.png"><a href="tel:+375298515251">+375(29)851-52-51</a><br>
-				<img src="./images/advantages/velcom.jpg"><a href="tel:+375296575971">+375(29)657-59-71</a><br>
-				<img src="./images/advantages/vib.png"><a href="tel:+375172400021">+375(17)240-00-21</a>
-						</div><br>
-<div align="center">
-<iframe src="https://yandex.by/sprav/widget/rating-badge/1373635637?type=rating" width="150" height="50" frameborder="0"></iframe></div>
+				<img src="./images/advantages/mtts.png"> <a href="tel:+375298515251">+375(29)851-52-51</a><br>
+				<img src="./images/advantages/velccom.png"> <a href="tel:+375296575971">+375(29)657-59-71</a><br>
+				<img src="./images/advantages/calls.png"> <a href="tel:+375172400021">+375(17)240-00-21</a><br>
+				<img src="./images/advantages/viber.png"> <a href="viber://add?number=375296575971">+375(29)657-59-71</a><br>
+				<img src="./images/advantages/telegram.png"> <a href="https://t.me/mathematicsby">+375(29)851-52-51</a><br>
+				<img src="./images/advantages/whatts.png"> <a href="whatsapp://send?text=Hello&phone=+375296575971&abid=+375296575971">+375(29)657-59-71</a><br>
+			</div>
 			<div class="otz">
 				<span class="otz0"><a href="otzivi.html">Отзывы о репетиторе &gt;&gt;</a></span>
 				<div class="ot0">
@@ -199,7 +200,7 @@
 						Денис Гайков
 					</div></a>
 					<div class="ot3">
-						<em>https://vk.com/dorianos</em>
+						<span class="former-em">https://vk.com/dorianos</span>
 					</div>
 					<div class="ot4">
 						"В 2013 году заканчивал школу (Лицей БГУ), решил подтянуть знания по математике, чтобы лучше сдать ЦТ. Когда только пришёл к Игорю Викторовичу, средний результат РТ был около 60 баллов, основные проблемы были связаны с невнимаельностью..." <a href="otzivi.html#denis"><span class="vpr">&gt;&gt;</span></a>
@@ -211,7 +212,7 @@
 							Каленик Карина
 						</div></a>
 						<div class="ot3">
-							<em>https://vk.com/id43488026</em>
+							<span class="former-em">https://vk.com/id43488026</span>
 						</div>
 						<div class="ot4">
 							"Хочу сказать спасибо Игорю Викторовичу за осуществление моей мечты! Я закончила 2 курса в ин.язе, а потом по некоторым обстоятельствам была вынуждена уйти. Само собой без высшего образования я оставаться не планировала, моей целью стал БГЭУ..." <a href="otzivi.html#kalenik"><span class="vpr">&gt;&gt;</span></a>
@@ -224,7 +225,7 @@
 							Филимонова Ольга
 						</div></a>
 						<div class="ot3">
-							<em>https://vk.com/id158624529</em>
+							<span class="former-em">https://vk.com/id158624529</span>
 						</div>
 						<div class="ot4">
 							"Что бы я могла рассказать об Игоре Викторовиче? Сказать, что он просто хороший преподаватель - явно недооценить все его таланты. Это не заурядный школьный учитель, которому нужно лишь провести свой урок и забыть о своём подопечном..." <a href="otzivi.html#filimonova"><span class="vpr">&gt;&gt;</span></a>
@@ -247,7 +248,7 @@
 							Симбура Андрей
 						</div></a>
 						<div class="ot3">
-							<em>https://vk.com/andrea94</em>
+							<span class="former-em">https://vk.com/andrea94</span>
 						</div>
 						<div class="ot4">
 							"Добрый день всем. Хотелось бы сказать пару слов о работе Игоря Викторовича. Впервые обратился к нему, когда необходимо было подготовиться к сдаче ЦТ по математике. Объясняет все очень доходчиво, понятно, если возникают вопросы, то обязательно на них ответит..." <a href="otzivi.html#simb"><span class="vpr">&gt;&gt;</span></a>
@@ -337,19 +338,19 @@
 		<img src="./images/photo/postss.png"> <a style="color: rgb(39, 43, 47); font-family: akrobat-regular;" href="mailto:info@mathematics.by">info@mathematics.by</a>
 </div><br>
 <div class="tyu">
-	Записаться на занятия можно по телефонам: 
+	Записаться на занятия можно по телефонам и через мессенджеры: 
 </div><br>
 <div class="telefon">
 	<div class="telefon1">
-		<img src="./images/photo/tell.png"><a style="text-decoration: none;color: rgb(39, 43, 47);" href="tel:+375172400021">+375 (17) 240-00-21</a><br>
-		<img src="./images/photo/ve.png"><a style="text-decoration: none;color: rgb(39, 43, 47);" href="tel:+375296575971">+375 (29) 657-59-71</a><br>
-		<img src="./images/photo/mt.png"><a style="text-decoration: none;color: rgb(39, 43, 47);" href="tel:+375298515251">+375 (29) 851-52-51</a>
+		<img src="./images/advantages/calls.png"><a style="text-decoration: none;color: rgb(39, 43, 47);" href="tel:+375172400021">+375 (17) 240-00-21</a><br>
+		<img src="./images/advantages/velccom.png"><a style="text-decoration: none;color: rgb(39, 43, 47);" href="tel:+375296575971">+375 (29) 657-59-71</a><br>
+		<img src="./images/advantages/mtts.png"><a style="text-decoration: none;color: rgb(39, 43, 47);" href="tel:+375298515251">+375 (29) 851-52-51</a>
 	</div>
 	<div class="telefon2">
-		<img src="./images/photo/vi.png"><a href="viber://add?number=375296575971">+375 (29) 657-59-71</a><br>
-		<img src="./images/photo/telegram.png" alt="telegram"> <a style="text-decoration: none;" href="tg://resolve?domain=mathematicsby">+375(29)851-52-51</a><br>
-		<img src="./images/photo/wa.png"><a href="whatsapp://send?text=Hello&phone=+375296575971&abid=+375296575971">+375 (29) 657-59-71</a><br>
-		<img src="./images/photo/sk.png"><a href="skype:xoziain_777?chat%E2%80%9D">(по запросу)</a>
+		<img src="./images/advantages/viber.png"><a href="viber://add?number=375296575971">+375 (29) 657-59-71</a><br>
+		<img src="./images/advantages/telegram.png" alt="telegram"><a style="text-decoration: none;" href="https://t.me/mathematicsby">+375(29)851-52-51</a><br>
+		<img src="./images/advantages/whatts.png"><a href="whatsapp://send?text=Hello&phone=+375296575971&abid=+375296575971">+375 (29) 657-59-71</a><br>
+		<!-- <img src="./images/advantages/skype.png"><a href="skype:xoziain_777?chat%E2%80%9D">(по запросу)</a> -->
 	</div>
 </div>
 <div class="karta1">
@@ -399,7 +400,7 @@
 					</div>
 					<div class="glf2">
 						<img src="./images/advantages/viber.png"> <a style="text-decoration: none;" href="viber://add?number=375296575971">+375(29)657-59-71</a><br>
-						<img src="./images/advantages/telegram.png"><a style="text-decoration: none;" href="tg://resolve?domain=mathematicsby">+375(29)851-52-51</a><br>
+						<img src="./images/advantages/telegram.png"><a style="text-decoration: none;" href="https://t.me/mathematicsby">+375(29)851-52-51</a><br>
 						<img src="./images/advantages/whatts.png"> <a style="text-decoration: none;" href="whatsapp://send?text=Hello&phone=+375296575971&abid=+375296575971">+375(29)657-59-71</a>
 					</div>
 					<div class="glf3">
