--- a/otzivi.html
+++ b/otzivi.html
@@ -203,9 +203,12 @@
 		</div>
 		<div class="fon">
 			<div class="foncall">
-				<img src="./images/advantages/mts.png"><a href="tel:+375298515251">+375(29)851-52-51</a><br>
-				<img src="./images/advantages/velcom.jpg"><a href="tel:+375296575971">+375(29)657-59-71</a><br>
-				<img src="./images/advantages/vib.png"><a href="tel:+375172400021">+375(17)240-00-21</a>
+				<img src="./images/advantages/mtts.png"> <a href="tel:+375298515251">+375(29)851-52-51</a><br>
+				<img src="./images/advantages/velccom.png"> <a href="tel:+375296575971">+375(29)657-59-71</a><br>
+				<img src="./images/advantages/calls.png"> <a href="tel:+375172400021">+375(17)240-00-21</a><br>
+				<img src="./images/advantages/viber.png"> <a href="viber://add?number=375296575971">+375(29)657-59-71</a><br>
+				<img src="./images/advantages/telegram.png"> <a href="https://t.me/mathematicsby">+375(29)851-52-51</a><br>
+				<img src="./images/advantages/whatts.png"> <a href="whatsapp://send?text=Hello&phone=+375296575971&abid=+375296575971">+375(29)657-59-71</a><br>
 			</div>
 			<div class="otz">
 			<div class="ot0">
@@ -216,7 +219,7 @@
 						Денис Гайков
 					</div></a>
 					<div class="ot3">
-						 <em>https://vk.com/dorianos</em>
+						 <span class="former-em">https://vk.com/dorianos</span>
 					</div>
 					<div class="ot4">
 						 "В 2013 году заканчивал школу 
@@ -236,7 +239,7 @@
 						Каленик Карина
 					</div></a>
 					<div class="ot3">
-						 <em>https://vk.com/id43488026</em>
+						 <span class="former-em">https://vk.com/id43488026</span>
 					</div>
 					<div class="ot4">
 						"Хочу сказать спасибо Игорю 
@@ -256,7 +259,7 @@
 						Филимонова Ольга
 					</div></a>
 					<div class="ot3">
-						 <em>https://vk.com/id158624529</em>
+						 <span class="former-em">https://vk.com/id158624529</span>
 					</div>
 					<div class="ot4">
 						"Что бы я могла рассказать об
@@ -292,7 +295,7 @@
 						Симбура Андрей
 					</div></a>
 					<div class="ot3">
-						 <em>https://vk.com/andrea94</em>
+						 <span class="former-em">https://vk.com/andrea94</span>
 					</div>
 					<div class="ot4">
 						"Добрый день всем. Хотелось 
@@ -311,36 +314,36 @@
 			<div class="right">
 			<span class="skr"><a href="texraboti.html">Отзывы о репетиторе с комментариями</a></span>
 			<span class="otz01"><a href="otzivi.html#kovalenko">Ещё отзывы о репетиторе по математике >></a></span>
-			<div class="portal-raitings">
-				<p style="margin-left: 5px; margin-top: 15px; color: dimgray;">
-					Отзывы и рейтинг <br> репетитора <br> по математике <br> на интернет-порталах:<br>
-				</p>
-				<p>
-					<a class="imagelink" 
-						href="https://www.google.ru/maps/place/%D0%A0%D0%B5%D0%BF%D0%B5%D1%82%D0%B8%D1%82%D0%BE%D1%80+%D0%BF%D0%BE+%D0%BC%D0%B0%D1%82%D0%B5%D0%BC%D0%B0%D1%82%D0%B8%D0%BA%D0%B5+%D0%B8+%D0%B2%D1%8B%D1%81%D1%88%D0%B5%D0%B9+%D0%BC%D0%B0%D1%82%D0%B5%D0%BC%D0%B0%D1%82%D0%B8%D0%BA%D0%B5/@53.8441701,27.4731643,17z/data=!4m7!3m6!1s0x46dbd08fe2ccda05:0xa95d082eeede3ee2!8m2!3d53.844167!4d27.475353!9m1!1b1"
-						target="_blank">
-						<img class="img-service-rating" src="images/outlogo/google-rating.png" alt="Отзывы и рейтинг репетитора по математике в Google">
-					</a>
-					<br>
-					<a class="imagelink" 
-						href="https://yandex.by/maps/org/repetitor_po_matematike_i_vysshey_matematike_ignatyev_igor_viktorovich/1373635637/reviews/"
-						target="_blank">
-						<img class="img-service-rating" src="images/outlogo/yandex-rating.png" alt="Отзывы и рейтинг репетитора по математике в Яндекс">
-					</a>
-					<br>
-					<a class="imagelink" 
-						href="https://uslugi.yandex.ru/profile/IgorViktorovichIgnatev-199845"
-						target="_blank">
-						<img class="img-service-rating" src="images/outlogo/yandex-service-rating.png" alt="Отзывы и рейтинг репетитора по математике в Яндекс.Услуги">
-					</a>
-					<br>
-					<a class="imagelink" 
-						href="https://zoon.by/minsk/p-repetitor/igor_viktorovich_ignatev/"
-						target="_blank">
-						<img class="img-service-rating" src="images/outlogo/zoon-rating.png" alt="Отзывы и рейтинг репетитора по математике в Zoon">
-					</a>
-				</p>
-			</div>
+	<div class="portal-raitings">
+		<p style="margin-left: 5px; margin-top: 15px; color: dimgray;">
+			Отзывы и рейтинг <br> репетитора <br> по математике <br> на интернет-порталах:<br>
+		</p>
+		<p>
+			<a class="imagelink"
+				href="https://zoon.by/minsk/p-repetitor/igor_viktorovich_ignatev/"
+				target="_blank">
+				<img class="img-service-rating" src="images/outlogo/zoon-rating.png" alt="Отзывы и рейтинг репетитора по математике в Zoon">
+			</a>
+			<br>
+			<a class="imagelink" 
+				href="https://www.google.ru/maps/place/%D0%A0%D0%B5%D0%BF%D0%B5%D1%82%D0%B8%D1%82%D0%BE%D1%80+%D0%BF%D0%BE+%D0%BC%D0%B0%D1%82%D0%B5%D0%BC%D0%B0%D1%82%D0%B8%D0%BA%D0%B5+%D0%B8+%D0%B2%D1%8B%D1%81%D1%88%D0%B5%D0%B9+%D0%BC%D0%B0%D1%82%D0%B5%D0%BC%D0%B0%D1%82%D0%B8%D0%BA%D0%B5/@53.8441701,27.4731643,17z/data=!4m7!3m6!1s0x46dbd08fe2ccda05:0xa95d082eeede3ee2!8m2!3d53.844167!4d27.475353!9m1!1b1"
+				target="_blank">
+				<img class="img-service-rating" src="images/outlogo/google-rating.png" alt="Отзывы и рейтинг репетитора по математике в Google">
+			</a>
+			<br>
+			<a class="imagelink" 
+				href="https://yandex.by/maps/org/repetitor_po_matematike_i_vysshey_matematike_ignatyev_igor_viktorovich/1373635637/reviews/"
+				target="_blank">
+				<img class="img-service-rating" src="images/outlogo/yandex-rating.png" alt="Отзывы и рейтинг репетитора по математике в Яндекс">
+			</a>
+			<br>
+			<a class="imagelink" 
+				href="https://uslugi.yandex.ru/profile/IgorViktorovichIgnatev-199845"
+				target="_blank">
+				<img class="img-service-rating" src="images/outlogo/yandex-service-rating.png" alt="Отзывы и рейтинг репетитора по математике в Яндекс.Услуги">
+			</a>
+		</p>
+	</div>
 				<!-- p><a class="blink" href="https://mathematics-by.tam.by/otzyvy/" target="_blank">Отзывы на Tam.by</a>:<br>
 				<a class="imagelink" href="https://mathematics-by.tam.by/otzyvy/" target="_blank"><img src="images/outlogo/tamby.png"></a></p-->
 				<div class="n1"><img src="./images/background/mm.png"></div>
@@ -467,7 +470,7 @@
 		<div class="t0">Подготовка к ЦТ по математике, отзывы</div></div>
 	</div>
 	<div class="tq40"><div class="comment_abitd">
-		<div id="denis"><div class="txx1">Денис Гайков <a target="_blank" href="https://vk.com/dorianos"><span class="vkic"><em>https://vk.com/dorianos</em></span></a></div></div></div>
+		<div id="denis"><div class="txx1">Денис Гайков <a target="_blank" href="https://vk.com/dorianos"><span class="vkic"><span class="former-em">https://vk.com/dorianos</span></span></a></div></div></div>
 	</div>
 		<div class="tq5">
 			<div class="tr1">В 2013 году заканчивал школу (Лицей БГУ), решил подтянуть знания по математике, чтобы 
@@ -497,7 +500,7 @@
 он через 2 года освежил всё в памяти и сдал на 100 баллов . Что тут добавить? Снимаю шляпу . <span class="fotk"><img src="./images/advantages/smile.png" style="vertical-align: middle;"></span> </div>
 		</div>
 		<div class="tq40"><div class="comment_abit">
-		<div id="kovalenko"><div class="txx1">Коваленко Александра<span class="vkic"><em>evreika86@mail.ru</em></span></div></div>
+		<div id="kovalenko"><div class="txx1">Коваленко Александра<span class="vkic"><span class="former-em">evreika86@mail.ru</span></span></div></div>
 		</div>
 	</div>
 	<div class="tq7">
@@ -518,7 +521,7 @@
 итоге - достойный результат при сдаче ЦТ .</div>
 	  </div>	 
 		<div class="tq40"><div class="comment_abit">
-		<div id="kalenik"><div class="txx1">Каленик Карина<a target="_blank" href="https://vk.com/id43488026"><span class="vkic"><em>https://vk.com/id43488026</em></span></a></div></div></div>
+		<div id="kalenik"><div class="txx1">Каленик Карина<a target="_blank" href="https://vk.com/id43488026"><span class="vkic"><span class="former-em">https://vk.com/id43488026</span></span></a></div></div></div>
 	</div>	
 	<div class="tq8">
 <div class="yt1">Хочу сказать спасибо Игорю Викторовичу за осуществление моей мечты! Я закончила 2 курса в инязе, а
@@ -568,7 +571,7 @@
 		<div class="t0">Отзывы о репетиторе по высшей математике, Минск</div></div>
 	</div>
 	<div class="tq40"><div class="comment_abit">
-		<div id="filimonova"><div class="txx1">Филимонова Ольга<a target="_blank" href="https://vk.com/id158624529"><span class="vkic"><em>https://vk.com/id158624529 </em></span></a></div></div></div>
+		<div id="filimonova"><div class="txx1">Филимонова Ольга<a target="_blank" href="https://vk.com/id158624529"><span class="vkic"><span class="former-em">https://vk.com/id158624529 </span></span></a></div></div></div>
 	</div>	
 	<div class="tq10">
 	<div class="yt2v_big">
@@ -697,7 +700,7 @@
 	</div>
 	</div>
 	<div class="tq40"><div class="comment_abit">
-		<div id="simb"><div class="txx1">Симбура Андрей<a target="_blank" href="https://vk.com/andrea94"><span class="vkic"><em>https://vk.com/andrea94</em></span></a></div></div></div>
+		<div id="simb"><div class="txx1">Симбура Андрей<a target="_blank" href="https://vk.com/andrea94"><span class="vkic"><span class="former-em">https://vk.com/andrea94</span></span></a></div></div></div>
 	</div>
 	<div class="tq14">
 	<div class="yt2v_big">
@@ -892,36 +895,36 @@
 
 	<div class="clear"></div>
 	<div class="right1">
-		<div class="portal-raitings">
-			<p style="margin-left: 5px; margin-top: 15px; color: dimgray;">
-				Отзывы и рейтинг <br> репетитора <br> по математике <br> на интернет-порталах:<br>
-			</p>
-			<p>
-				<a class="imagelink" 
-					href="https://www.google.ru/maps/place/%D0%A0%D0%B5%D0%BF%D0%B5%D1%82%D0%B8%D1%82%D0%BE%D1%80+%D0%BF%D0%BE+%D0%BC%D0%B0%D1%82%D0%B5%D0%BC%D0%B0%D1%82%D0%B8%D0%BA%D0%B5+%D0%B8+%D0%B2%D1%8B%D1%81%D1%88%D0%B5%D0%B9+%D0%BC%D0%B0%D1%82%D0%B5%D0%BC%D0%B0%D1%82%D0%B8%D0%BA%D0%B5/@53.8441701,27.4731643,17z/data=!4m7!3m6!1s0x46dbd08fe2ccda05:0xa95d082eeede3ee2!8m2!3d53.844167!4d27.475353!9m1!1b1"
-					target="_blank">
-					<img class="img-service-rating" src="images/outlogo/google-rating.png" alt="Отзывы и рейтинг репетитора по математике в Google">
-				</a>
-				<br>
-				<a class="imagelink" 
-					href="https://yandex.by/maps/org/repetitor_po_matematike_i_vysshey_matematike_ignatyev_igor_viktorovich/1373635637/reviews/"
-					target="_blank">
-					<img class="img-service-rating" src="images/outlogo/yandex-rating.png" alt="Отзывы и рейтинг репетитора по математике в Яндекс">
-				</a>
-				<br>
-				<a class="imagelink" 
-					href="https://uslugi.yandex.ru/profile/IgorViktorovichIgnatev-199845"
-					target="_blank">
-					<img class="img-service-rating" src="images/outlogo/yandex-service-rating.png" alt="Отзывы и рейтинг репетитора по математике в Яндекс.Услуги">
-				</a>
-				<br>
-				<a class="imagelink" 
-					href="https://zoon.by/minsk/p-repetitor/igor_viktorovich_ignatev/"
-					target="_blank">
-					<img class="img-service-rating" src="images/outlogo/zoon-rating.png" alt="Отзывы и рейтинг репетитора по математике в Zoon">
-				</a>
-			</p>
-		</div>
+	<div class="portal-raitings">
+		<p style="margin-left: 5px; margin-top: 15px; color: dimgray;">
+			Отзывы и рейтинг <br> репетитора <br> по математике <br> на интернет-порталах:<br>
+		</p>
+		<p>
+			<a class="imagelink"
+				href="https://zoon.by/minsk/p-repetitor/igor_viktorovich_ignatev/"
+				target="_blank">
+				<img class="img-service-rating" src="images/outlogo/zoon-rating.png" alt="Отзывы и рейтинг репетитора по математике в Zoon">
+			</a>
+			<br>
+			<a class="imagelink" 
+				href="https://www.google.ru/maps/place/%D0%A0%D0%B5%D0%BF%D0%B5%D1%82%D0%B8%D1%82%D0%BE%D1%80+%D0%BF%D0%BE+%D0%BC%D0%B0%D1%82%D0%B5%D0%BC%D0%B0%D1%82%D0%B8%D0%BA%D0%B5+%D0%B8+%D0%B2%D1%8B%D1%81%D1%88%D0%B5%D0%B9+%D0%BC%D0%B0%D1%82%D0%B5%D0%BC%D0%B0%D1%82%D0%B8%D0%BA%D0%B5/@53.8441701,27.4731643,17z/data=!4m7!3m6!1s0x46dbd08fe2ccda05:0xa95d082eeede3ee2!8m2!3d53.844167!4d27.475353!9m1!1b1"
+				target="_blank">
+				<img class="img-service-rating" src="images/outlogo/google-rating.png" alt="Отзывы и рейтинг репетитора по математике в Google">
+			</a>
+			<br>
+			<a class="imagelink" 
+				href="https://yandex.by/maps/org/repetitor_po_matematike_i_vysshey_matematike_ignatyev_igor_viktorovich/1373635637/reviews/"
+				target="_blank">
+				<img class="img-service-rating" src="images/outlogo/yandex-rating.png" alt="Отзывы и рейтинг репетитора по математике в Яндекс">
+			</a>
+			<br>
+			<a class="imagelink" 
+				href="https://uslugi.yandex.ru/profile/IgorViktorovichIgnatev-199845"
+				target="_blank">
+				<img class="img-service-rating" src="images/outlogo/yandex-service-rating.png" alt="Отзывы и рейтинг репетитора по математике в Яндекс.Услуги">
+			</a>
+		</p>
+	</div>
 	</div>
 		
 	<div class="no">
@@ -939,7 +942,7 @@
 			</div>
 			<div class="glf2">
 				<img src="./images/advantages/viber.png"> <a style="text-decoration: none;" href="viber://add?number=375296575971">+375(29)657-59-71</a><br>
-				<img src="./images/advantages/telegram.png"><a style="text-decoration: none;" href="tg://resolve?domain=mathematicsby">+375(29)851-52-51</a><br>
+				<img src="./images/advantages/telegram.png"><a style="text-decoration: none;" href="https://t.me/mathematicsby">+375(29)851-52-51</a><br>
 				<img src="./images/advantages/whatts.png"> <a style="text-decoration: none;" href="whatsapp://send?text=Hello&phone=+375296575971&abid=+375296575971">+375(29)657-59-71</a>
 			</div>
 			<div class="glf3">
