--- a/podgotovka_k_ekzamenu.html
+++ b/podgotovka_k_ekzamenu.html
@@ -49,12 +49,12 @@
 					<a class="blink" href="about.html">Информация о репетиторе</a><br>
 					<a class="blink" href="otzivi.html">Отзывы и комментарии</a><br>
 					<a class="blink" href="mestopolozhenie.html">Местоположение и контакты</a><br>
-					<a class="blink" href="uslovia_i_ceny2.html">Подготовка к ЦТ и ЦЭ</a><br>
-					<a class="blink" href="podgotovka_k_ekzamenu.html">Высшая математика</a><br>
 					<a class="blink" href="shkolnikam.html">Математика для школьников</a><br>
+					<a class="blink" href="uslovia_i_ceny2.html">Подготовка к ЦТ и ЦЭ</a><br>
+					<a class="blink" href="preparation-for-lyceums.html">Подготовка в лицеи</a><br>
+					<a class="blink" href="podgotovka_k_ekzamenu.html">Высшая математика</a><br>
 					<a class="blink" href="mathematics-for-professionals.html">Математика для взрослых</a><br>
 					<a class="blink" href="pomosch_reshenii_zadach.html">Онлайн репетитор</a><br>
-					<a class="blink" href="metodika_prepodavania.html">Подготовка в лицеи</a><br>
 					<a class="blink" href="russian-language-tutor.html">Репетитор по русскому языку</a><br>
 				</div>
 			</div>
@@ -68,28 +68,25 @@
 						<a class="blink" href="about.html">Информация о репетиторе</a><br>
 						<a class="blink" href="otzivi.html">Отзывы и комментарии</a><br>
 						<a class="blink" href="mestopolozhenie.html">Местоположение и контакты</a><br>
-						<a class="blink" href="uslovia_i_ceny2.html">Подготовка к ЦТ и ЦЭ</a><br>
-						<a class="blink" href="podgotovka_k_ekzamenu.html">Высшая математика</a><br>
 						<a class="blink" href="shkolnikam.html">Математика для школьников</a><br>
+						<a class="blink" href="uslovia_i_ceny2.html">Подготовка к ЦТ и ЦЭ</a><br>
+						<a class="blink" href="preparation-for-lyceums.html">Подготовка в лицеи</a><br>
+						<a class="blink" href="podgotovka_k_ekzamenu.html">Высшая математика</a><br>
 						<a class="blink" href="mathematics-for-professionals.html">Математика для взрослых</a><br>
 						<a class="blink" href="pomosch_reshenii_zadach.html">Онлайн репетитор</a><br>
-						<a class="blink" href="metodika_prepodavania.html">Подготовка в лицеи</a><br>
 						<a class="blink" href="russian-language-tutor.html">Репетитор по русскому языку</a><br>
 					</div>
 				</details>
 			</div>
 			<div class="fon">
 				<div class="foncall">
-					<img src="./images/advantages/mts.png"
-					 	alt="tech">
-						<a href="tel:+375298515251">+375(29)851-52-51</a><br>
-					<img src="./images/advantages/velcom.jpg"
-					 	alt="tech">
-						<a href="tel:+375296575971">+375(29)657-59-71</a><br>
-					<img src="./images/advantages/vib.png"
-					 	alt="tech">
-						<a href="tel:+375172400021">+375(17)240-00-21</a>
-				</div><br>
+					<img src="./images/advantages/mtts.png"> <a href="tel:+375298515251">+375(29)851-52-51</a><br>
+					<img src="./images/advantages/velccom.png"> <a href="tel:+375296575971">+375(29)657-59-71</a><br>
+					<img src="./images/advantages/calls.png"> <a href="tel:+375172400021">+375(17)240-00-21</a><br>
+					<img src="./images/advantages/viber.png"> <a href="viber://add?number=375296575971">+375(29)657-59-71</a><br>
+					<img src="./images/advantages/telegram.png"> <a href="https://t.me/mathematicsby">+375(29)851-52-51</a><br>
+					<img src="./images/advantages/whatts.png"> <a href="whatsapp://send?text=Hello&phone=+375296575971&abid=+375296575971">+375(29)657-59-71</a><br>
+				</div>
 				<div class="otz">
 					<span class="otz0">
 						<a href="otzivi.html">Отзывы о репетиторе >></a>
@@ -105,7 +102,7 @@
 							<a href="otzivi.html#denis">Денис Гайков</a>
 						</div>
 						<div class="ot3">
-							<em>https://vk.com/dorianos</em>
+							<span class="former-em">https://vk.com/dorianos</span>
 						</div>
 						<div class="ot4">
 							 "В 2013 году заканчивал школу 
@@ -129,7 +126,7 @@
 								<a href="otzivi.html#kalenik">Каленик Карина</a>
 							</div>
 							<div class="ot3">
-								<em>https://vk.com/id43488026</em>
+								<span class="former-em">https://vk.com/id43488026</span>
 							</div>
 							<div class="ot4">
 															"Хочу сказать спасибо Игорю 
@@ -156,7 +153,7 @@
 								</a>
 							</div>
 							<div class="ot3">
-								<em>https://vk.com/id158624529</em>
+								<span class="former-em">https://vk.com/id158624529</span>
 							</div>
 							<div class="ot4">
 														"Что бы я могла рассказать об
@@ -205,7 +202,7 @@
 								</a>
 							</div>
 							<div class="ot3">
-								<em>https://vk.com/andrea94</em>
+								<span class="former-em">https://vk.com/andrea94</span>
 							</div>
 							<div class="ot4">
 														"Добрый день всем. Хотелось 
@@ -238,6 +235,12 @@
 			Отзывы и рейтинг <br> репетитора <br> по математике <br> на интернет-порталах:<br>
 		</p>
 		<p>
+			<a class="imagelink"
+				href="https://zoon.by/minsk/p-repetitor/igor_viktorovich_ignatev/"
+				target="_blank">
+				<img class="img-service-rating" src="images/outlogo/zoon-rating.png" alt="Отзывы и рейтинг репетитора по математике в Zoon">
+			</a>
+			<br>
 			<a class="imagelink" 
 				href="https://www.google.ru/maps/place/%D0%A0%D0%B5%D0%BF%D0%B5%D1%82%D0%B8%D1%82%D0%BE%D1%80+%D0%BF%D0%BE+%D0%BC%D0%B0%D1%82%D0%B5%D0%BC%D0%B0%D1%82%D0%B8%D0%BA%D0%B5+%D0%B8+%D0%B2%D1%8B%D1%81%D1%88%D0%B5%D0%B9+%D0%BC%D0%B0%D1%82%D0%B5%D0%BC%D0%B0%D1%82%D0%B8%D0%BA%D0%B5/@53.8441701,27.4731643,17z/data=!4m7!3m6!1s0x46dbd08fe2ccda05:0xa95d082eeede3ee2!8m2!3d53.844167!4d27.475353!9m1!1b1"
 				target="_blank">
@@ -254,12 +257,6 @@
 				href="https://uslugi.yandex.ru/profile/IgorViktorovichIgnatev-199845"
 				target="_blank">
 				<img class="img-service-rating" src="images/outlogo/yandex-service-rating.png" alt="Отзывы и рейтинг репетитора по математике в Яндекс.Услуги">
-			</a>
-			<br>
-			<a class="imagelink" 
-				href="https://zoon.by/minsk/p-repetitor/igor_viktorovich_ignatev/"
-				target="_blank">
-				<img class="img-service-rating" src="images/outlogo/zoon-rating.png" alt="Отзывы и рейтинг репетитора по математике в Zoon">
 			</a>
 		</p>
 	</div>
@@ -323,7 +320,6 @@
 		</div>
 		
 		<div class="main">
-
 			<div class="right1">
 				<span class="skr">
 					<a href="otzivi.html">Отзывы о репетиторе с комментариями</a>
@@ -334,48 +330,50 @@
 				<span class="h21">Подготовка к экзамену</span>
 			</h2>
 
-			<p class="zgt">
-				1. Зачастую, многие студенты полагают, что, поступив в ВУЗ, они обязательно через 5 лет получат диплом. Это не совсем так. Высшее образование не является обязательным и не предполагает «разжевывания» материала, многое дается на самостоятельную проработку. Далеко не все оказываются готовы к такому подходу. В результате - пересдача (в лучшем случае). Не является секретом, что большинство студентов отчисляют на 1-м и 2-м курсах, что вполне разумно. Зачем держать неуспевающих студентов? Наиболее «отсевным» предметом является высшая математика (ТВ и МС, математическое программирование), благодаря которой обычно отчисляется больше студентов, чем по всем остальным предметам вместе взятым. Это вполне логично, т.к. выучить математику невозможно, требуется понимание данного материала и умение применять его на практике. Далеко не каждому под силу разобраться самостоятельно, но, как говорится, пока гром не грянет, мужик не перекрестится.
-			</p>
-			<p class="zgt">
-				Совет: не стоит доводить дело до пересдачи, решайте проблемы по мере их появления.
-			</p>
-			<p class="zgt">
-				Если же ситуация на грани отчисления - отчаиваться не стоит, проблему можно решить, но будьте готовы, что придется приложить максимум усилий.
-			</p>
-			<p class="zgt">
-				2. Предложение:
-			</p>
-			<p class="zgt">
-				- индивидуальные занятия, продолжительность от 2-х (90 минут) до 3-х (135 минут) академических часов, стоимость 17,5 долларов США по курсу продажи в коммерческих банках Республики Беларусь за один академический час.
-			</p>
-			<p class="zgt">
-				- занятия в паре, продолжительность от 2-х (90 минут) до 3-х (135 минут) академических часов, стоимость 15 долларов США по курсу продажи в коммерческих банках Республики Беларусь за один академический час.
-			</p>
-			<p class="zgt">
-				- занятия в мини группах, продолжительность от 2-х (90 минут) до 3 (135 минут) академических часа, стоимость 12,5 долларов США по курсу продажи в коммерческих банках Республики Беларусь за один академический час. В группе 3-6 человек.
-			</p>
-			<p class="zgt">
-				- количество занятий: 1-2 раза в неделю (90-135-180 минут). При ограничении во времени частоту занятий желательно  увеличить.
-			</p>
-			<p class="zgt">
-				- для студентов математичкских факультетов и специальностей (включая прикладные) цену следует уточнить.
-			</p>
-			<p class="zgt">
-				- для тех, кому требуется экстренная помощь (несколько занятий), нужно смотреть раздел «Консультации».
-			</p>
-			<p class="zgt">
-				3. Записаться на занятия можно по телефонам: <br><br>
-				<b>
-					8-017-37-222-73 (городской)<br>
-					8-029-657-59-71 (Velcom)<br>
-					8-029-851-52-51 (MTS)
-				</b>
-			</p>
-			<p class="zgt">
-				P.S.: Занятия проходят на территории преподавателя.
-			</p>
-		<div class="clear"></div>
+			<div id="realmain" class="zgt">
+				<p class="zgt">
+					1. Зачастую, многие студенты полагают, что, поступив в ВУЗ, они обязательно через 5 лет получат диплом. Это не совсем так. Высшее образование не является обязательным и не предполагает «разжевывания» материала, многое дается на самостоятельную проработку. Далеко не все оказываются готовы к такому подходу. В результате - пересдача (в лучшем случае). Не является секретом, что большинство студентов отчисляют на 1-м и 2-м курсах, что вполне разумно. Зачем держать неуспевающих студентов? Наиболее «отсевным» предметом является высшая математика (ТВ и МС, математическое программирование), благодаря которой обычно отчисляется больше студентов, чем по всем остальным предметам вместе взятым. Это вполне логично, т.к. выучить математику невозможно, требуется понимание данного материала и умение применять его на практике. Далеко не каждому под силу разобраться самостоятельно, но, как говорится, пока гром не грянет, мужик не перекрестится.
+				</p>
+				<p class="zgt">
+					Совет: не стоит доводить дело до пересдачи, решайте проблемы по мере их появления.
+				</p>
+				<p class="zgt">
+					Если же ситуация на грани отчисления - отчаиваться не стоит, проблему можно решить, но будьте готовы, что придется приложить максимум усилий.
+				</p>
+				<p class="zgt">
+					2. Предложение:
+				</p>
+				<p class="zgt">
+					- индивидуальные занятия, продолжительность от 2-х (90 минут) до 3-х (135 минут) академических часов, стоимость 17,5 долларов США по курсу продажи в коммерческих банках Республики Беларусь за один академический час.
+				</p>
+				<p class="zgt">
+					- занятия в паре, продолжительность от 2-х (90 минут) до 3-х (135 минут) академических часов, стоимость 15 долларов США по курсу продажи в коммерческих банках Республики Беларусь за один академический час.
+				</p>
+				<p class="zgt">
+					- занятия в мини группах, продолжительность от 2-х (90 минут) до 3 (135 минут) академических часа, стоимость 12,5 долларов США по курсу продажи в коммерческих банках Республики Беларусь за один академический час. В группе 3-6 человек.
+				</p>
+				<p class="zgt">
+					- количество занятий: 1-2 раза в неделю (90-135-180 минут). При ограничении во времени частоту занятий желательно  увеличить.
+				</p>
+				<p class="zgt">
+					- для студентов математичкских факультетов и специальностей (включая прикладные) цену следует уточнить.
+				</p>
+				<p class="zgt">
+					- для тех, кому требуется экстренная помощь (несколько занятий), нужно смотреть раздел «Консультации».
+				</p>
+				<p class="zgt">
+					3. Записаться на занятия можно по телефонам: <br><br>
+					<b>
+						8-017-37-222-73 (городской)<br>
+						8-029-657-59-71 (Velcom)<br>
+						8-029-851-52-51 (MTS)
+					</b>
+				</p>
+				<p class="zgt">
+					P.S.: Занятия проходят на территории преподавателя.
+				</p>
+			</div>
+			<div class="clear"></div>
 	</div>
 	<div class="clear"></div>
 	<div class="right1">
@@ -386,36 +384,36 @@
 		</span>
 	</div>	
 	<div class="right1">
-		<div class="portal-raitings">
-			<p style="margin-left: 5px; margin-top: 15px; color: dimgray;">
-				Отзывы и рейтинг <br> репетитора <br> по математике <br> на интернет-порталах:<br>
-			</p>
-			<p>
-				<a class="imagelink" 
-					href="https://www.google.ru/maps/place/%D0%A0%D0%B5%D0%BF%D0%B5%D1%82%D0%B8%D1%82%D0%BE%D1%80+%D0%BF%D0%BE+%D0%BC%D0%B0%D1%82%D0%B5%D0%BC%D0%B0%D1%82%D0%B8%D0%BA%D0%B5+%D0%B8+%D0%B2%D1%8B%D1%81%D1%88%D0%B5%D0%B9+%D0%BC%D0%B0%D1%82%D0%B5%D0%BC%D0%B0%D1%82%D0%B8%D0%BA%D0%B5/@53.8441701,27.4731643,17z/data=!4m7!3m6!1s0x46dbd08fe2ccda05:0xa95d082eeede3ee2!8m2!3d53.844167!4d27.475353!9m1!1b1"
-					target="_blank">
-					<img class="img-service-rating" src="images/outlogo/google-rating.png" alt="Отзывы и рейтинг репетитора по математике в Google">
-				</a>
-				<br>
-				<a class="imagelink" 
-					href="https://yandex.by/maps/org/repetitor_po_matematike_i_vysshey_matematike_ignatyev_igor_viktorovich/1373635637/reviews/"
-					target="_blank">
-					<img class="img-service-rating" src="images/outlogo/yandex-rating.png" alt="Отзывы и рейтинг репетитора по математике в Яндекс">
-				</a>
-				<br>
-				<a class="imagelink" 
-					href="https://uslugi.yandex.ru/profile/IgorViktorovichIgnatev-199845"
-					target="_blank">
-					<img class="img-service-rating" src="images/outlogo/yandex-service-rating.png" alt="Отзывы и рейтинг репетитора по математике в Яндекс.Услуги">
-				</a>
-				<br>
-				<a class="imagelink" 
-					href="https://zoon.by/minsk/p-repetitor/igor_viktorovich_ignatev/"
-					target="_blank">
-					<img class="img-service-rating" src="images/outlogo/zoon-rating.png" alt="Отзывы и рейтинг репетитора по математике в Zoon">
-				</a>
-			</p>
-		</div>
+	<div class="portal-raitings">
+		<p style="margin-left: 5px; margin-top: 15px; color: dimgray;">
+			Отзывы и рейтинг <br> репетитора <br> по математике <br> на интернет-порталах:<br>
+		</p>
+		<p>
+			<a class="imagelink"
+				href="https://zoon.by/minsk/p-repetitor/igor_viktorovich_ignatev/"
+				target="_blank">
+				<img class="img-service-rating" src="images/outlogo/zoon-rating.png" alt="Отзывы и рейтинг репетитора по математике в Zoon">
+			</a>
+			<br>
+			<a class="imagelink" 
+				href="https://www.google.ru/maps/place/%D0%A0%D0%B5%D0%BF%D0%B5%D1%82%D0%B8%D1%82%D0%BE%D1%80+%D0%BF%D0%BE+%D0%BC%D0%B0%D1%82%D0%B5%D0%BC%D0%B0%D1%82%D0%B8%D0%BA%D0%B5+%D0%B8+%D0%B2%D1%8B%D1%81%D1%88%D0%B5%D0%B9+%D0%BC%D0%B0%D1%82%D0%B5%D0%BC%D0%B0%D1%82%D0%B8%D0%BA%D0%B5/@53.8441701,27.4731643,17z/data=!4m7!3m6!1s0x46dbd08fe2ccda05:0xa95d082eeede3ee2!8m2!3d53.844167!4d27.475353!9m1!1b1"
+				target="_blank">
+				<img class="img-service-rating" src="images/outlogo/google-rating.png" alt="Отзывы и рейтинг репетитора по математике в Google">
+			</a>
+			<br>
+			<a class="imagelink" 
+				href="https://yandex.by/maps/org/repetitor_po_matematike_i_vysshey_matematike_ignatyev_igor_viktorovich/1373635637/reviews/"
+				target="_blank">
+				<img class="img-service-rating" src="images/outlogo/yandex-rating.png" alt="Отзывы и рейтинг репетитора по математике в Яндекс">
+			</a>
+			<br>
+			<a class="imagelink" 
+				href="https://uslugi.yandex.ru/profile/IgorViktorovichIgnatev-199845"
+				target="_blank">
+				<img class="img-service-rating" src="images/outlogo/yandex-service-rating.png" alt="Отзывы и рейтинг репетитора по математике в Яндекс.Услуги">
+			</a>
+		</p>
+	</div>
 	</div>
 		
 	<div class="no">
@@ -433,7 +431,7 @@
 			</div>
 			<div class="glf2">
 				<img src="./images/advantages/viber.png"> <a style="text-decoration: none;" href="viber://add?number=375296575971">+375(29)657-59-71</a><br>
-				<img src="./images/advantages/telegram.png"><a style="text-decoration: none;" href="tg://resolve?domain=mathematicsby">+375(29)851-52-51</a><br>
+				<img src="./images/advantages/telegram.png"><a style="text-decoration: none;" href="https://t.me/mathematicsby">+375(29)851-52-51</a><br>
 				<img src="./images/advantages/whatts.png"> <a style="text-decoration: none;" href="whatsapp://send?text=Hello&phone=+375296575971&abid=+375296575971">+375(29)657-59-71</a>
 			</div>
 			<div class="glf3">
