--- a/preparation-for-lyceums.html
+++ b/preparation-for-lyceums.html
@@ -31,10 +31,12 @@
 				 	alt="tech">
 			</div>
 			<div class="g2">
-			<h1>Репетитор по математике в Минске ИЗМЕНИТЬ</h1>
+			<h1>
+				Репетитор по математике<br>
+				готовит к экзамену в лицеи
+			</h1>
 			<span class="zs">  
-				Математика: подготовка к ЦТ по математике, репетитор математики для школьников, <br>
-				репетитор по высшей математике для студентов, Минск. ИЗМЕНИТЬ
+				Подготовка по математике к поступлению в лицей, 9 класс
 			</span>
 			</div>
 			<div class="g3">
@@ -323,8 +325,9 @@
 		<div class="main">
 			<h2 class="main">
 				<span class="h11">
-					Репетитор по математике и высшей математике в Минске Игнатьев Игорь Викторович<br>
-					Проспект Дзержинского, дом 131, станция метро «Малиновка», Брилевичи ИЗМЕНИТЬ
+					Репетитор по математике готовит к экзамену в лицеи. 
+					Подготовка по математике к поступлению в лицей, 9 класс. 
+					Подготовка к экзаменам в лицеи, 9 класс, Минск, Беларусь.
 				</span>
 			</h2>
 
@@ -334,28 +337,102 @@
 				</span>
 			</div>
 
-			<h2 class="main"> 
-				<span class="h21">Основные направления деятельности:</span>
-			</h2>
-
-			<div id="realmain" class="zgt">
-				<p class="zgt">
-					ИЗМЕНИТЬ ОСНОВНОЕ СОДЕРЖАНИЕ
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec pulvinar euismod lorem vel ornare. Nulla accumsan suscipit mollis. Nunc maximus mauris sit amet nisi aliquam, sit amet rutrum libero laoreet. Phasellus non velit ac nisl malesuada finibus. Quisque quis nunc id tellus interdum maximus. Mauris sit amet gravida orci, ut iaculis nibh. Suspendisse volutpat feugiat orci quis faucibus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Quisque id sagittis metus, nec sagittis ligula. Aliquam viverra quam non risus luctus, ut rutrum nisl mattis. Quisque nec libero euismod sem tincidunt ornare cursus at metus. Nunc suscipit fermentum egestas. Nullam id enim eu enim facilisis commodo.
-					Suspendisse vulputate leo eu commodo maximus. Sed nisi urna, varius sed efficitur eget, venenatis id ipsum. Nullam pretium mi non arcu rutrum, a faucibus nunc pretium. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Quisque congue lectus sit amet turpis ultrices aliquam. Nunc euismod erat magna, quis egestas sem gravida eu. Nunc pellentesque facilisis mauris, non facilisis purus ultrices egestas. Phasellus ultricies euismod erat, sit amet porta tellus semper ut. Aenean non turpis viverra, aliquet sapien eget, egestas diam. Nullam sed neque ac ex egestas commodo non quis dolor. Donec elit diam, porttitor sed enim non, auctor ornare ante. Aenean laoreet efficitur quam, sit amet tempor dui ultricies placerat. Cras placerat eu nulla sit amet placerat. Ut a ultrices nisi.
-				</p>
-				<ul>
-					<li>Пункт важный </li>
-					<li>Пункт менее важный</li>
-				</ul>
-				<ol>
-					<li>Пункт первый </li>
-					<li>Пункт второй</li>
-				</ol>
-				<p class="zgt">
-					<img src="images/advantages/a2_multifunctionality.png" alt="Выбрать нужный рисунок">
-				</p>
+		<div id="realmain" class="zgt">
+			<div class="ck">
+				<img alt="Репетитор по математике готовит к экзамену в лицеи"
+					class="image1"  
+					src="images/photo/preparation-for-lyceums-1.jpg" 
+					title="Репетитор по математике готовит к экзамену в лицеи">
+				<!-- </a> При наличии tab-ов или даже переноса строки - добавляет между фото фиолетовую ссылку длиной в пробел -->
+				<img alt="Подготовка по математике к поступлению в лицей, 9 класс"
+					class="image" 
+					src="images/photo/preparation-for-lyceums-2.jpg" 
+					title="Подготовка по математике к поступлению в лицей, 9 класс">
 			</div>
+			<h3>
+				Варианты подготовки
+			</h3>
+			<p class="zgt"> 
+				К 9 классу пора определится с профилем обучения на III ступени – cреднего образования
+					(X – XI классы).   <br>
+					Для мотивированных детей есть <em>2 варианта</em>: 
+			</p>
+
+			<ol>
+				<li>Сдать <em>серьезные вступительные экзамены</em> и поступить в лицей.</li>
+				<li>По высокому среднему баллу итоговых оценок за 9 класс пройти в <em>сильный профильный класс хорошей гимназии</em>.</li>
+			</ol>
+					
+			<p class="zgt">         
+					Подготовку к экзамену по математике при поступлении в лицеи
+					проводит репетитор по математике Игнатьев Игорь Викторович.
+			</p>
+			<h3>I. Лицеи в Минске:</h3>
+			<p class="zgt">
+				После 9 класса учащиеся могут поступить в <em>3 лицея</em> в Минске:
+			</p>
+			
+			<ol>
+				<li>Лицей им. Ф.Э. Дзержинского БГУ</li>
+				<li>Лицей БНТУ</li>
+				<li>Минский государственный областной лицей</li>
+			</ol>
+			<p class="zgt">
+				В последние годы <em>единые экзамены</em> для 
+				поступления  составляет
+				<span class="p1"><a target="_blank" href = "https://rikc.by/licei/696-informacija-o-provedenii-vstupitelnyh-ispytanij-v-x-klass-liceev.html">РИКЗ</a></span>, 
+				разница будет в количестве проходных баллов в зависимости от престижности выбранного лицея и 
+				профилизации. Отмечу, что это серьезное испытание, и готовиться к нему стоит начинать 
+				заблаговременно.
+			</p>
+			<h3>II. Вступительный экзамен в лицеи:</h3>
+			<p class="zgt">
+				На протяжении продолжительного времени каждый лицей самостоятельно готовил варианты вступительных экзаменов. Как правило, чем 
+				престижнее был лицей, тем тяжелее вступительные испытания.  Но основная проблема заключалась в том, что при таком подходе всегда 
+				страдала объективность вступительной кампании: появлялись репетиторы, которым заранее известны варианты вступительных испытаний, 
+				становились важными определенные знакомства, финансовые возможности и т.д.
+			</p>
+			<p class="zgt">
+				В 2022 году <em>варианты вступительных экзаменов начал составлять РИКЗ</em>. Экзамен состоит из 10 заданий разного уровня сложности. 
+				Не стоит его путать с выпускным экзаменом в 9 классе. Вступительные испытания сложнее, и задания заранее не известны. 
+				Цель вступительного экзамена – выявить лучших, а не сделать его несложным для многих. Вступительная кампания стала значительно 
+				прозрачней и справедливей. Я бы порекомендовал сдать вступительные испытания хотя бы для того, чтобы <em>оценить свои реальные 
+				знания по математике и сопоставить себя с другими мотивированными учащимися</em>.
+			</p>
+			<p class="zgt">
+				Когда стоит начинать подготовку? <em>Чем раньше, тем лучше</em>. Кашу маслом не испортишь
+				<img src="./images/advantages/smile.png" 
+				alt="tech"
+				style="vertical-align: middle; width: 30px;"> Если ученик, обладающий трудолюбием и определенными 
+				способностями, занимался у меня в 7-м и 8-м классе на <em>углубленном уровне изучения математики</em>, то в 9-м он продолжает работать по привычной 
+				для него схеме. Тот факт, что дополнительно появляются <em>варианты по программе профильного</em>, а затем и углубленного изучения математики на 
+				базе 9 классов, уже не могут его испугать. Периодически встречающиеся <em>олимпиадные задания</em> становятся нормой. Разбираются все вступительные 
+				экзамены прошлых лет, составленные РИКЗ. Проводится <em> повторение, обобщение и систематизация</em> пройденного материала за 9 лет обучения.
+			</p>
+
+			<p class="zgt">
+				Информацию об условиях, ценах, формате и количестве занятий при подготовке в лицеи по математике смотрите в пунктах 3-5 на странице - 
+				<a href="shkolnikam.html#b3">математика для школьников</a>
+			</p>
+
+			<p class="zgt">
+				Список основных разделов математики и разделов для подготовки к олимпиадам можно узнать на странице -   
+				<a href="math-9th-class.html">репетитор по математике для 9 класса</a>
+			</p>
+ 
+			<p class="zgt">
+				Могу порекомендовать репетитора по физике для подготовки в лицеи.
+			</p>
+			<h3>
+				Литература для подготовки к экзамену в лицеи по математике:
+			</h3>
+			<ul class="zgt">
+				<li>Генденштейн Л. Э. Наглядный справочник по математике с примерами (Илекса)</li>
+				<li>Арефьева И.Г., Пирютко О.Н. Школа юных математиков. Алгебра. 9 класс (Аверсэв)</li>
+				<li>Валаханович Т.В., Шлыков В.В. Геометрия. 9 класс. Самостоятельные и контрольные работы (Аверсэв)</li>
+				<li>Основные учебные материалы предоставляю я</li>
+			</ul>
+		</div>
 		<div class="clear"></div>
 	</div>
 	<div class="clear"></div>
